@@ -9,7 +9,7 @@ my $builder = Module::Build->new(
     dist_author         => 'Fayland Lam <fayland@gmail.com>',
     dist_version_from   => 'lib/Padre/Plugin/CSS.pm',
     requires => {
-        'Padre' => '0.26',
+        'Padre' => '0.43',
         'WebService::Validator::CSS::W3C' => 0,
         'CSS::Minifier::XS' => 0,
         'YAML::Tiny' => 0,
