@@ -4,6 +4,7 @@ NOT RELEASED!
     Add context help with very basic data in a yaml file (SZABGAB)
     Renamed to the new Padre 0.43 PO naming scheme (azawawi)
     Autocompletition support (CHORNY)
+    compatibility to latest Padre version (ZENOG)
 
 0.08    2009.05.31
     removed taint mode for tests, which lead to some fails (jquelin)
